Basic skeleton app

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,9 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Prettier configuration file
+.prettierrc.yaml
+
+# Compiled CSS file
+stylesheets/main.css
