--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.38.0"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security"
   }
